# hate-speech-detection

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: run_cross_domain.py  run_in_domain.py
src/hate_speech/: __init__.py  __main__.py  config.py
src/hate_speech/data/: loader.py  preprocessor.py
src/hate_speech/evaluation/: analysis.py  metrics.py  visualization.py
src/hate_speech/experiments/: cross_domain.py  in_domain.py
src/hate_speech/features/: lexicon.py  tfidf.py
src/hate_speech/models/: classical.py  hybrid.py  transformer.py
