[project]
name = "hate-speech-detection"
version = "0.1.0"
description = "Cross-domain hate speech detection: transformer and classical ML pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "wordcloud>=1.9",
    "torch>=2.3",
    "transformers>=4.41",
    "simpletransformers>=0.70",
    "psutil>=6.0",
]

[project.scripts]
hate-speech-run         = "hate_speech.__main__:main"
hate-speech-indomain    = "hate_speech.experiments.in_domain:main"
hate-speech-crossdomain = "hate_speech.experiments.cross_domain:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hate_speech"]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
